--- a/merge.html
+++ b/merge.html
@@ -112,15 +112,10 @@
     </footer>
    
 
-    <script src="C:\Users\Akshatha\OneDrive\Desktop\hackathon\main.js"></script>   <!--This should be at the end of body and should be loaded before sorts.js-->
-    <script src="C:\Users\Akshatha\OneDrive\Desktop\hackathon\visualization.js"></script>  <!--This should be loaded after main.js-->
+     <script src="main.js"></script>   <!--This should be at the end of body and should be loaded before sorts.js-->
+    <script src="visualization.js"></script>  <!--This should be loaded after main.js-->
 
-    <!-- <script src="C:\Users\Akshatha\OneDrive\Desktop\hackathon\bubble.js"></script> -->
-    <!-- <script src="C:\Users\AREEBAH TASDEEQ\Desktop\hackathon\selection.js"></script>
-    <script src="C:\Users\AREEBAH TASDEEQ\Desktop\hackathon\insertion.js"></script> -->
-    <script src="C:\Users\Akshatha\OneDrive\Desktop\hackathon\merge.js"></script>
-    <!-- <script src="C:\Users\AREEBAH TASDEEQ\Desktop\hackathon\quick.js"></script>
-    <script src="C:\Users\AREEBAH TASDEEQ\Desktop\hackathon\heap.js"></script>
+      <script src="merge.js"></script>
      -->
 </body>
 
